# AIStudioDataPreparation

./: .gitignore  Cargo.toml  README.md
src/: extract_data.rs  main.rs  stream_data.rs
